[project]
name = "backend"
version = "0.1.0"
description = "Website cloning service backend"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.115.12",
    "uvicorn>=0.27.1",
    "beautifulsoup4>=4.12.3",
    "requests>=2.31.0",
    "python-dotenv>=1.0.1",
    "google-generativeai>=0.3.2",
    "playwright>=1.42.0",
    "aiohttp>=3.9.3",
    "pydantic>=2.6.3",
]
